<resources>
  <string name="login_in_progress">Logging in…</string>
  <string name="app_name">Tiny Tiny RSS</string>
  <string name="login_need_configure">Please configure the application first.</string>
  <string name="login_ready">Ready to login.</string>
  <string name="login_login">Log in</string>
  <string name="logout">Log out</string>
  <string name="login">Login</string>
  <string name="debugging">Debugging</string>
  <string name="password">Password</string>
  <string name="default_url">http://example.domain/tt-rss/</string>
  <string name="look_and_feel">Interface</string>
  <string name="pref_theme">Theme</string>
  <string name="pref_theme_long">Changes color theme of the application</string>
  <string name="ttrss_url">Tiny Tiny RSS URL</string>
  <string name="theme_dark">Dark</string>
  <string name="preferences">Settings</string>
  <string name="theme_light">Light</string>
  <string name="connection">Connection</string>
  <string name="headline_context_multiple">Selected articles</string>
  <string name="http_authentication">HTTP Authentication</string>
  <string name="loading_message">Loading, please wait…</string>
  <string name="menu_unread_feeds">Show unread feeds</string>
  <string name="menu_all_feeds">Show all feeds</string>
  <string name="update_feeds">Refresh</string>
  <string name="share_article">Share article</string>
  <string name="catchup">Mark read</string>
  <string name="sort_feeds_by_unread">Sort feeds by unread count</string>
  <string name="ssl_trust_any">Accept any certificate</string>
  <string name="category_browse_feeds">Browse feeds</string>
  <string name="category_browse_articles">Browse articles</string>
  <string name="category_feed_langs">Set feed language...</string>
  <string name="category_feed_lang_be">Belorussian</string>
  <string name="category_feed_lang_bn">Bengali</string>
  <string name="category_feed_lang_ca">Catalan</string>
  <string name="category_feed_lang_cs">Czech</string>
  <string name="category_feed_lang_da">Danish</string>
  <string name="category_feed_lang_de">German</string>
  <string name="category_feed_lang_el_monoton">Greek (monoton)</string>
  <string name="category_feed_lang_el_polyton">Greek (polyton)</string>
  <string name="category_feed_lang_en_gb">English (GB)</string>
  <string name="category_feed_lang_en_us">English (US)</string>
  <string name="category_feed_lang_eo">Esperanto</string>
  <string name="category_feed_lang_es">Spanish</string>
  <string name="category_feed_lang_et">Estonian</string>
  <string name="category_feed_lang_fi">Finnish</string>
  <string name="category_feed_lang_fr">French</string>
  <string name="category_feed_lang_grc">Greek (ancient)</string>
  <string name="category_feed_lang_gu">Gujarati</string>
  <string name="category_feed_lang_hi">Hindi</string>
  <string name="category_feed_lang_hu">Hungarian</string>
  <string name="category_feed_lang_hy">Armenian</string>
  <string name="category_feed_lang_it">Italian</string>
  <string name="category_feed_lang_kn">Kannada</string>
  <string name="category_feed_lang_la">Latin</string>
  <string name="category_feed_lang_lt">Lithuanian</string>
  <string name="category_feed_lang_lv">Latvian</string>
  <string name="category_feed_lang_ml">Malayalam</string>
  <string name="category_feed_lang_nb_no">Norwegian</string>
  <string name="category_feed_lang_nl">Dutch</string>
  <string name="category_feed_lang_or">Oriya</string>
  <string name="category_feed_lang_pa">Panjabi</string>
  <string name="category_feed_lang_pl">Polish</string>
  <string name="category_feed_lang_pt">Portuguese</string>
  <string name="category_feed_lang_ro">Romanian</string>
  <string name="category_feed_lang_ru">Russian</string>
  <string name="category_feed_lang_ru_en">Russian with English</string>
  <string name="category_feed_lang_sk">Slovak</string>
  <string name="category_feed_lang_sl">Slovenian</string>
  <string name="category_feed_lang_sr_latn">Serbian (latin)</string>
  <string name="category_feed_lang_sv">Swedish</string>
  <string name="category_feed_lang_ta">Tamil</string>
  <string name="category_feed_lang_te">Telugu</string>
  <string name="category_feed_lang_tr">Turkish</string>
  <string name="category_feed_lang_uk">Ukrainian</string>
  <string name="blank"></string>
  <string name="transport_debugging">Log sent and received data</string>
  <string name="article_toggle_marked">(Un)Star</string>
  <string name="article_toggle_published">(Un)Publish</string>
  <string name="headlines_select">Select articles</string>
  <string name="headlines_select_dialog">Select articles</string>
  <string name="headlines_select_all">Everything</string>
  <string name="headlines_select_unread">Unread</string>
  <string name="headlines_select_none">Deselect all</string>
  <string name="selection_toggle_marked">(Un)Star</string>
  <string name="selection_toggle_published">(Un)Publish</string>
  <string name="selection_toggle_unread">(Un)Read</string>
  <string name="selection_select_none">Deselect all</string>
  <string name="context_selection_toggle_marked">(Un)Star</string>
  <string name="context_selection_toggle_published">(Un)Publish</string>
  <string name="context_selection_toggle_unread">(Un)Read</string>
  <string name="article_set_unread">Article set unread</string>
  <string name="article_mark_read_above">Mark above read</string>
  <string name="http_login_summary">Optional. Fill this if your tt-rss installation is protected by HTTP Basic authentication</string>
  <string name="login_summary">Your tt-rss login. Not needed for single user mode</string>
  <string name="ttrss_url_summary">URL of your tt-rss installation directory, e.g. http://site.com/tt-rss/</string>
  <string name="download_feed_icons">Enable feed icons</string>
  <string name="enable_cats">Enable feed categories</string>
  <string name="no_feeds_to_display">No feeds to display</string>
  <string name="no_headlines_to_display">No headlines to display</string>
  <string name="no_caption_to_display">No caption to display</string>
  <string name="browse_cats_like_feeds">Browse categories like feeds</string>
  <string name="browse_cats_like_feeds_summary">Use category context menu to override this setting</string>
  <string name="headlines_mark_as_read">Mark read</string>
  <string name="error_unknown">Error: Unknown error (see log)</string>
  <string name="error_http_unauthorized">Error: 401 unauthorized</string>
  <string name="error_http_forbidden">Error: 403 forbidden</string>
  <string name="error_http_not_found">Error: 404 not found</string>
  <string name="error_http_server_error">Error: 500 server error</string>
  <string name="error_http_other_error">Error: other HTTP error (see log)</string>
  <string name="error_ssl_rejected">Error: SSL certificate rejected</string>
  <string name="error_parse_error">Error: JSON parse failed</string>
  <string name="error_io_error">Error: I/O failure (server down?)</string>
  <string name="error_other_error">Error: unknown error (see log)</string>
  <string name="error_api_disabled">Error: Please enable external API access in tt-rss Settings - Advanced</string>
  <string name="error_api_unknown">Error: unknown API error (see log)</string>
  <string name="error_api_incorrect_usage">Error: incorrect API usage</string>
  <string name="error_login_failed">Error: username or password incorrect</string>
  <string name="error_invalid_api_url">Error: invalid API URL</string>
  <string name="combined_mode_summary">Displays full article text inline, instead of a separate panel</string>
  <string name="combined_mode">Combined mode</string>
  <string name="go_offline">Go offline</string>
  <string name="go_online">Go online</string>
  <string name="offline_switch_error">Failed to prepare offline mode (see log)</string>
  <string name="no_feeds">No feeds to display</string>
  <string name="no_headlines">No articles to display</string>
  <string name="dialog_offline_prompt">Login failed, but you have stored offline data. Would you like to go offline?</string>
  <string name="dialog_offline_success">Offline mode is ready</string>
  <string name="dialog_offline_go">Go offline</string>
  <string name="dialog_cancel">Cancel</string>
  <string name="dialog_offline_switch_prompt">Download unread articles and go offline?</string>
  <string name="notify_downloading_articles">Downloading articles (%1$d)…</string>
  <string name="notify_downloading_init">Starting download…</string>
  <string name="notify_downloading_feeds">Downloading feeds…</string>
  <string name="notify_uploading_sending_data">Sending data to server…</string>
  <string name="notify_downloading_title">Preparing offline mode</string>
  <string name="notify_uploading_title">Synchronizing offline data</string>
  <string name="offline_sync_success">Finished synchronizing your offline data</string>
  <string name="offline_mode">Offline mode</string>
  <string name="offline_image_cache_enabled">Cache images</string>
  <string name="offline_image_cache_enabled_summary">Download images to sdcard. This might significantly increase time it takes to go offline.</string>
  <string name="notify_downloading_images">Downloading images (%1$d)…</string>
  <string name="article_set_labels">Set labels</string>
  <string name="search">Search</string>
  <string name="cancel">Cancel</string>
  <string name="font_size_small">Small</string>
  <string name="font_size_medium">Medium</string>
  <string name="font_size_large">Large</string>
  <string name="pref_font_size">Article text size</string>
  <string name="donate">Donate</string>
  <string name="dialog_close">Close</string>
  <string name="donate_select">Please select the donation</string>
  <string name="donate_do">Donate!</string>
  <string name="tablet_article_swipe">Swipe between articles</string>
  <string name="article_link_copy">Copy link to clipboard</string>
  <string name="text_copied_to_clipboard">Text copied to clipboard</string>
  <string name="attachments_prompt">Select attachment</string>
  <string name="attachment_view">View</string>
  <string name="attachment_copy">Copy URL</string>
  <string name="justify_article_text">Justify article text</string>
  <string name="dialog_offline_sync_in_progress">Offline sync in progress</string>
  <string name="dialog_offline_sync_stop">Stop syncing</string>
  <string name="dialog_offline_sync_continue">Continue</string>
  <string name="article_set_note">Publish with note</string>
  <string name="close_feed">Close feed</string>
  <string name="close_article">Close article</string>
  <string name="dialog_open_preferences">Settings</string>
  <string name="dialog_need_configure_prompt">Please fill in your tt-rss server information such as URL, login, and password.</string>
  <string name="notify_article_marked">Article starred</string>
  <string name="notify_article_unmarked">Article unstarred</string>
  <string name="notify_article_published">Article published</string>
  <string name="notify_article_unpublished">Article unpublished</string>
  <string name="notify_article_note_set">Article note saved</string>
  <string name="update_headlines">Refresh</string>
  <string name="attachment_share">Share</string>
  <string name="error_network_unavailable">Error: network unavailable</string>
  <string name="category_browse_headlines">Browse headlines</string>
  <string name="pref_default_view_mode">Default feed view</string>
  <string name="pref_default_view_mode_long">Which feed view to open by default on smartphones</string>
  <string name="donate_thanks">Donation found, thank you for support!</string>
  <string name="use_volume_keys">Use volume buttons</string>
  <string name="use_volume_keys_long">Switch between articles with hardware volume buttons</string>
  <string name="ssl_trust_any_host">No hostname verification</string>
  <string name="error_api_unknown_method">Error: unknown API method</string>
  <string name="ssl_trust_any_long">Accepts any SSL certificate without validation</string>
</resources>