<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <item
    android:id="@+id/browse_headlines"
    android:title="@string/category_browse_headlines"/>

  <item
    android:id="@+id/browse_articles"
    android:title="@string/category_browse_articles"/>

  <item
    android:id="@+id/browse_feeds"
    android:title="@string/category_browse_feeds"/>

  <item
    android:id="@+id/feed_langs"
    android:title="@string/category_feed_langs">
    <!-- available hyphenation languages -->
    <menu>
      <item
        android:id="@+id/feed_lang_be"
        android:title="@string/category_feed_lang_be"/>
      <item
        android:id="@+id/feed_lang_bn"
        android:title="@string/category_feed_lang_bn"/>
      <item
        android:id="@+id/feed_lang_ca"
        android:title="@string/category_feed_lang_ca"/>
      <item
        android:id="@+id/feed_lang_cs"
        android:title="@string/category_feed_lang_cs"/>
      <item
        android:id="@+id/feed_lang_da"
        android:title="@string/category_feed_lang_da"/>
      <item
        android:id="@+id/feed_lang_de"
        android:title="@string/category_feed_lang_de"/>
      <item
        android:id="@+id/feed_lang_el_monoton"
        android:title="@string/category_feed_lang_el_monoton"/>
      <item
        android:id="@+id/feed_lang_el_polyton"
        android:title="@string/category_feed_lang_el_polyton"/>
      <item
        android:id="@+id/feed_lang_en_gb"
        android:title="@string/category_feed_lang_en_gb"/>
      <item
        android:id="@+id/feed_lang_en_us"
        android:title="@string/category_feed_lang_en_us"/>
      <item
        android:id="@+id/feed_lang_eo"
        android:title="@string/category_feed_lang_eo"/>
      <item
        android:id="@+id/feed_lang_es"
        android:title="@string/category_feed_lang_es"/>
      <item
        android:id="@+id/feed_lang_et"
        android:title="@string/category_feed_lang_et"/>
      <item
        android:id="@+id/feed_lang_fi"
        android:title="@string/category_feed_lang_fi"/>
      <item
        android:id="@+id/feed_lang_fr"
        android:title="@string/category_feed_lang_fr"/>
      <item
        android:id="@+id/feed_lang_grc"
        android:title="@string/category_feed_lang_grc"/>
      <item
        android:id="@+id/feed_lang_gu"
        android:title="@string/category_feed_lang_gu"/>
      <item
        android:id="@+id/feed_lang_hi"
        android:title="@string/category_feed_lang_hi"/>
      <item
        android:id="@+id/feed_lang_hu"
        android:title="@string/category_feed_lang_hu"/>
      <item
        android:id="@+id/feed_lang_hy"
        android:title="@string/category_feed_lang_hy"/>
      <item
        android:id="@+id/feed_lang_it"
        android:title="@string/category_feed_lang_it"/>
      <item
        android:id="@+id/feed_lang_kn"
        android:title="@string/category_feed_lang_kn"/>
      <item
        android:id="@+id/feed_lang_la"
        android:title="@string/category_feed_lang_la"/>
      <item
        android:id="@+id/feed_lang_lt"
        android:title="@string/category_feed_lang_lt"/>
      <item
        android:id="@+id/feed_lang_lv"
        android:title="@string/category_feed_lang_lv"/>
      <item
        android:id="@+id/feed_lang_ml"
        android:title="@string/category_feed_lang_ml"/>
      <item
        android:id="@+id/feed_lang_nb_no"
        android:title="@string/category_feed_lang_nb_no"/>
      <item
        android:id="@+id/feed_lang_nl"
        android:title="@string/category_feed_lang_nl"/>
      <item
        android:id="@+id/feed_lang_or"
        android:title="@string/category_feed_lang_or"/>
      <item
        android:id="@+id/feed_lang_pa"
        android:title="@string/category_feed_lang_pa"/>
      <item
        android:id="@+id/feed_lang_pl"
        android:title="@string/category_feed_lang_pl"/>
      <item
        android:id="@+id/feed_lang_pt"
        android:title="@string/category_feed_lang_pt"/>
      <item
        android:id="@+id/feed_lang_ro"
        android:title="@string/category_feed_lang_ro"/>
      <item
        android:id="@+id/feed_lang_ru"
        android:title="@string/category_feed_lang_ru"/>
      <item
        android:id="@+id/feed_lang_ru_en"
        android:title="@string/category_feed_lang_ru_en"/>
      <item
        android:id="@+id/feed_lang_sk"
        android:title="@string/category_feed_lang_sk"/>
      <item
        android:id="@+id/feed_lang_sl"
        android:title="@string/category_feed_lang_sl"/>
      <item
        android:id="@+id/feed_lang_sr_latn"
        android:title="@string/category_feed_lang_sr_latn"/>
      <item
        android:id="@+id/feed_lang_sv"
        android:title="@string/category_feed_lang_sv"/>
      <item
        android:id="@+id/feed_lang_ta"
        android:title="@string/category_feed_lang_ta"/>
      <item
        android:id="@+id/feed_lang_te"
        android:title="@string/category_feed_lang_te"/>
      <item
        android:id="@+id/feed_lang_tr"
        android:title="@string/category_feed_lang_tr"/>
      <item
        android:id="@+id/feed_lang_uk"
        android:title="@string/category_feed_lang_uk"/>
    </menu>
  </item>

  <item
    android:id="@+id/catchup_feed"
    android:title="@string/catchup"/>

</menu>